--- a/index.html
+++ b/index.html
@@ -34,7 +34,9 @@
                         <div class="input-group-prepend">
                             <span class="material-icons">email </span>
                         </div>
-                        <input type="email" class="input-text" data-error-name="Email" id="email" placeholder="Enter your email...">
+                        <input type="text"
+                               class="input-text" data-error-name="Email" id="email"
+                               placeholder="Enter your email...">
                     </div>
                 </div>
                 <div class="form-input">
@@ -43,7 +45,9 @@
                         <div class="input-group-prepend">
                             <span class="material-icons">phone </span>
                         </div>
-                        <input type="text" class="input-text" data-error-name="Phone" id="phone" placeholder="Enter your phone...">
+                        <input type="text"
+                               class="input-text" data-error-name="Phone" id="phone"
+                               placeholder="Enter your phone...">
                     </div>
                 </div>
             </div>
@@ -57,39 +61,44 @@
                         <div class="input-group-prepend">
                             <span class="material-icons">account_circle </span>
                         </div>
-                        <input type="text" class="input-text" data-error-name="Full Name" id="full-name" value="Rodney Cotton"
-                               placeholder="Rodney Cotton">
+                        <input type="text"
+                               class="input-text" data-error-name="Full name" id="full-name"
+                               placeholder="Your full name...">
                     </div>
                 </div>
                 <div class="form-input">
-                    <label class="form-input-label" for="phone">Address</label>
+                    <label class="form-input-label" for="address">Address</label>
                     <div class="input-group">
                         <div class="input-group-prepend">
                             <span class="material-icons">home </span>
                         </div>
-                        <input type="text" class="input-text " data-error-name="Address" id="address" placeholder="Your address...">
+                        <input type="text"
+                               class="input-text " data-error-name="Address" id="address"
+                               placeholder="Your address...">
                     </div>
                 </div>
                 <div class="form-input">
-                    <label class="form-input-label" for="phone">City</label>
+                    <label class="form-input-label" for="city">City</label>
                     <div class="input-group">
                         <div class="input-group-prepend">
                             <span class="material-icons">location_city</span>
                         </div>
-                        <input type="text" class="input-text" data-error-name="City" id="city" placeholder="Your city...">
+                        <input type="text"
+                               class="input-text" data-error-name="City" id="city"
+                               placeholder="Your city..." >
                     </div>
                 </div>
                 <div class="row">
                     <div class="col-6">
                         <div class="form-input">
-                            <label class="form-input-label" for="phone">Country</label>
+                            <label class="form-input-label" for="country">Country</label>
                             <div class="input-group">
                                 <div class="input-group-prepend">
                                     <span class="material-icons">public</span>
                                 </div>
                                 <select name="country" data-error-name="Country" id="country" class="input-select">
                                     <option value="">Your country...</option>
-                                    <option value="1">Viet Nam</option>
+                                    <option value="1" selected>Viet Nam</option>
                                     <option value="2">United States</option>
                                     <option value="3">United Kingdom</option>
                                 </select>
@@ -98,12 +107,14 @@
                     </div>
                     <div class="col-6">
                         <div class="form-input">
-                            <label class="form-input-label" for="phone">Postal Code</label>
+                            <label class="form-input-label" for="postal-code">Postal Code</label>
                             <div class="input-group">
                                 <div class="input-group-prepend">
                                     <span class="material-icons">markunread_mailbox</span>
                                 </div>
-                                <input type="text" class="input-text" data-error-name="Postal Code" id="postal-code"
+                                <input type="text"
+                                       value="12345-1234"
+                                       class="input-text" data-error-name="Postal Code" id="postal-code"
                                        placeholder="Your postal code...">
                             </div>
                         </div>
@@ -126,8 +137,8 @@
                 <div class="checkout-item-info">
                     <div class="checkout-item-name">Vintage Backbag</div>
                     <div class="checkout-item-price">
-                        <span class="price-sale price">$54.99</span>
-                        <span class="price-base price">$94.99</span>
+                        <span class="price-sale price" data-price="54.99">$54.99</span>
+                        <span class="price-base price" data-price="94.99">$94.99</span>
                     </div>
                     <div class="checkout-item-qty">
                         <button class="checkout-item-qty__prepend">
@@ -137,7 +148,7 @@
                             <input type="number" value="1" min="1" class="qty-input" name="qty-product-1">
 
                         </div>
-                        <button class="checkout-item-qty__prepend">
+                        <button class="checkout-item-qty__append">
                             <span class="material-icons">add</span>
                         </button>
                     </div>
@@ -149,12 +160,10 @@
                     <img src="./asset/images/photo2.png" alt="vinatage-backbag">
                 </div>
                 <div class="checkout-item-info">
-                    <div class="checkout-item-wrap">
-                        <div class="checkout-item-name">Levi Shoes</div>
-                        <div class="checkout-item-price">
-                            <span class="price-sale price">$74.99</span>
-                            <span class="price-base price">$124.99</span>
-                        </div>
+                    <div class="checkout-item-name">Levi Shoes</div>
+                    <div class="checkout-item-price">
+                        <span class="price-sale price" data-price="74.99">$74.99</span>
+                        <span class="price-base price" data-price="124.99">$124.99</span>
                     </div>
 
                     <div class="checkout-item-qty">
@@ -162,9 +171,9 @@
                             <span class="material-icons">remove</span>
                         </button>
                         <div class="checkout-item-qty__input">
-                            <input type="number"  value="1" min="1" class="qty-input" name="qty-product-1">
+                            <input type="number" value="1" min="1" class="qty-input" name="qty-product-1">
                         </div>
-                        <button class="checkout-item-qty__prepend">
+                        <button class="checkout-item-qty__append">
                             <span class="material-icons">add</span>
                         </button>
                     </div>
@@ -174,17 +183,145 @@
             <div class="checkout-total">
                 <div class="checkout-total-item">
                     <div class="checkout-total-item__label">Shipping</div>
-                    <div class="checkout-total-item__price">$19</div>
+                    <div class="checkout-total-item__price" id="js-shipping" data-price="19">$19</div>
                 </div>
                 <div class="checkout-total-item">
                     <div class="checkout-total-item__label">Total</div>
-                    <div class="checkout-total-item__price">$148.98</div>
+                    <div class="checkout-total-item__price" id="js-total">$148.98</div>
                 </div>
             </div>
         </div>
     </div>
     <div class="footer">
         Created by <a href="" class="user-name">tatranan</a> - <a href="" class="link-challenge">devChallenge.io</a>
+    </div>
+    <div class="overlay hidden"></div>
+    <div class="modal hidden">
+        <div class="modal-header">
+            <div class="modal-title">Order Information</div>
+            <div class="modal-icon" id="modal-close">
+                <span class="material-icons">close </span>
+            </div>
+        </div>
+        <div class="modal-body">
+            <div class="customer-information">
+                <div class="customer-info-wrap">
+                    <div class="customer-info-item">
+                        <div class="customer-info-label">Name:</div>
+                        <div class="customer-info-content" id="customer-info-full-name">Rodney Cotton</div>
+                    </div>
+                    <div class="customer-info-item">
+                        <div class="customer-info-label">Date:</div>
+                        <div class="customer-info-content" id="customer-info-date">01-04-2022 00:00:00</div>
+                    </div>
+                </div>
+                <div class="customer-info-wrap">
+                    <div class="customer-info-item">
+                        <div class="customer-info-label">Email:</div>
+                        <div class="customer-info-content" id="customer-info-email">rodneycotton@gmail.com</div>
+                    </div>
+                    <div class="customer-info-item">
+                        <div class="customer-info-label">Phone:</div>
+                        <div class="customer-info-content" id="customer-info-phone">(910) 754-6159</div>
+                    </div>
+
+                </div>
+                <div class="customer-info-wrap">
+                    <div class="customer-info-item">
+                        <div class="customer-info-label">Address</div>
+                        <div class="customer-info-content" id="customer-info-address">3989 1st St SW Shallotte</div>
+                    </div>
+                    <div class="customer-info-item">
+                        <div class="customer-info-label">Country:</div>
+                        <div class="customer-info-content" id="customer-info-country">United State</div>
+                    </div>
+
+                </div>
+                <div class="customer-info-wrap">
+                    <div class="customer-info-item">
+                        <div class="customer-info-label">City:</div>
+                        <div class="customer-info-content" id="customer-info-city">North Carolina(NC)</div>
+                    </div>
+                    <div class="customer-info-item">
+                        <div class="customer-info-label">Zipcode:</div>
+                        <div class="customer-info-content" id="customer-info-postal-code">28470</div>
+                    </div>
+                </div>
+            </div>
+            <div class="order-info">
+                <div id="checkout-order-mobile">
+                    <div class="checkout-order-title modal-title">
+                        Product
+                    </div>
+                    <div class="checkout-order-product-detail"></div>
+                    <div class="order-summary">
+                        <div class="order-summary-item">
+                            <div class="order-summary-name font-bold">Subtotal</div>
+                            <div class="order-summary-price font-bold order-subtotal">$498.00</div>
+                        </div>
+                        <div class="order-summary-item">
+                            <div class="order-summary-name font-bold">Shipping</div>
+                            <div class="order-summary-price font-bold">$19.00</div>
+                        </div>
+                        <div class="order-summary-item">
+                            <div class="order-summary-name font-bold">Total</div>
+                            <div class="order-summary-price font-bold order-total">$536.00</div>
+                        </div>
+                    </div>
+
+                </div>
+                <table id="table-order">
+                    <thead>
+                    <td>No.</td>
+                    <td>Name</td>
+                    <td>Price</td>
+                    <td>Discount</td>
+                    <td>Sale</td>
+                    <td>Qty</td>
+                    <td>Subtotal</td>
+                    </thead>
+                    <tbody id="table-body"></tbody>
+                    <tfoot>
+                    <tr>
+                        <td colspan="5"></td>
+                        <td>
+                            <div class="order-label">Shipping</div>
+                        </td>
+                        <td><span class="order-shipping">19</span> $</td>
+                    </tr>
+                    <tr>
+                        <td colspan="5"></td>
+                        <td>
+                            <div class="order-label">Total</div>
+                        </td>
+                        <td><span class="order-total">19</span> $</td>
+                    </tr>
+                    </tfoot>
+                </table>
+            </div>
+
+            <div class="alert hidden">
+                <div class=" alert-wrap ">
+                    <div class="alert-icon">
+                   <span class="material-icons">
+                    check_circle
+                    </span>
+                    </div>
+                    <div class="alert-title">
+                        Thank you for your purcharse
+                    </div>
+                    <div class="alert-description">
+                        We have sent your order confirmation and invoice to <span
+                            class="alert-email">rodneycotton@gmail.com</span>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="modal-footer">
+            <div class="button-wrap">
+                <button type="button" class="button" id="checkout-button">Continue</button>
+            </div>
+        </div>
     </div>
 </div>
 <script src="./asset/js/index.js"></script>
